feat: alterado course para discipline e corrigido re-preenchimento do aluno
